Fix dropdown box-shadow on mobile nav

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -274,7 +274,7 @@ body {
 					  flex-direction: column;
 					  position: relative;
 						width: 100%;
-						box-shadow: 0 0 0 0;
+						box-shadow: none;
 						padding: 0;
 					  .dropdown-item {
 					  	border-top: 1px solid #ebebeb;
